--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,10 +14,7 @@ repos:
     rev: 'v1.5.1'
     hooks:
     - id: mypy
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v1.5.1'
-    hooks:
-    - id: mypy
+      additional_dependencies: [types-PyYAML>=6.0.12.12]
   - repo: 'https://github.com/pre-commit/pre-commit-hooks'
     rev: v4.4.0
     hooks:
