--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -1,11 +1,11 @@
 project_name: human_body_segmentation
 experiment_name: segmentation_baseline
-track_in_clearml: false
+track_in_clearml: true
 trainer_config:
   min_epochs: 7
   max_epochs: 100
-  check_val_every_n_epoch: 3
-  log_every_n_steps: 50
+  check_val_every_n_epoch: 5
+  log_every_n_steps: 20
   gradient_clip_val: null
   gradient_clip_algorithm: null
   deterministic: false
@@ -15,11 +15,11 @@ trainer_config:
 data_config:
   dataset_name: pascal_parts_dataset
   img_size:
-  - 64
-  - 64
+  - 224
+  - 224
   batch_size: 32
   data_split:
   - 0.8
   - 0.2
-  num_workers: 0
+  num_workers: 8
   pin_memory: true
