--- a/setup.cfg
+++ b/setup.cfg
@@ -15,12 +15,16 @@ max-line-length = 120
 
 # Exclude some checks globally:
 ignore =
-    D100, D101, D102, D103, D105, D107, D104, D401, WPS305, WPS458, WPS301, E203, W503, WPS236, DAR101
+    D100, D101, D102, D103, D105, D107, D104, D401, WPS305, WPS458, WPS301, E203, W503, WPS236, DAR
 
     # Allow %s string formatting in logs
     WPS323
 
 per-file-ignores =
+  src/schedulers.py: WPS432, WPS221
+  src/callbacks/debug.py: WPS348, WPS432
+  src/transform.py: WPS432
+
   # Allow asserts in tests.
   tests/**/*.py: S101
 
@@ -38,7 +42,7 @@ enable_error_code = truthy-bool, redundant-expr
 
 allow_redefinition = false
 check_untyped_defs = true
-disallow_any_explicit = true
+disallow_any_explicit = false
 disallow_any_generics = true
 disallow_untyped_calls = true
 disallow_untyped_decorators = true
