--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ tensorboard = ">=2.14.0"
 segmentation-models-pytorch = ">=0.3.3"
 jpeg4py = "0.1.4"
 imageio = "2.34.0"
+kornia = ">=0.7.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = ">=3.2.1"
