--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,9 @@ per-file-ignores =
   src/callbacks/debug.py: WPS348, WPS432
   src/transform.py: WPS432
 
+  src/dataset.py: WPS226, WPS201
+  src/datamodule.py: WPS226
+
   # Allow asserts in tests.
   tests/**/*.py: S101
 
