--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ ignore =
 
 per-file-ignores =
   src/schedulers.py: WPS432, WPS221
+  src/export.py: WPS432
   src/callbacks/debug.py: WPS348, WPS432
   src/transform.py: WPS432
 
